HL works with WDG without conflict prioritization, LL heuristic is backward dikstra with our neighbor function

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,8 @@
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}",
                 "-I${workspaceFolder}/inc",
-                "-I /usr/lib/x86_64-linux-gnu"
+                // "-I /usr/lib/x86_64-linux-gnu",
+                "-lboost_program_options"
             ],
             "options": {
                 "cwd": "${fileDirname}"
