Added theta to paths and storing (x,y,theta) in paths.txt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,6 @@
 {
     "files.associations": {
-        "*.tcc": "cpp",
-        "deque": "cpp",
-        "vector": "cpp",
-        "iostream": "cpp",
-        "tuple": "cpp"
+        "iostream": "cpp"
     },
     "C_Cpp.errorSquiggles": "Enabled"
 }
